# Connect4_nao

./: .#CMakeLists.txt  .gitignore  CMakeLists.txt  CMakeListsNao.txt  Lapin.r  MM5-3vsMM.csv  MM5-3vsMMNoDepthDegression.csv  MMArthur5-3vsMMarthur.csv  MMTArthur5-3vsMMTArthurNoDepthDegression.csv  MMTArthur5-3vsMMTArthurNoDepthDegressionx3.csv  MMTweak5-3vsMMTweak.csv  README.md  Test.csv  a.txt  b.txt  c.txt  d.txt  display_image.cpp  example.csv  exploit_AI.r  nao.txt  nao@128.39.75.111  run_on_nao.sh  save.cvconf
build-ctc/: dependencies.cmake
build-ctc/sdk/share/qi/: path.conf
build-mytoolchain/: dependencies.cmake
build-mytoolchain/sdk/share/qi/: path.conf
build-sys-linux-x86_64/: dependencies.cmake
build-sys-linux-x86_64/sdk/share/qi/: path.conf
include/: AI.hpp  Basic.hpp  Human.hpp  Minmax.hpp  Minmax_tweak.hpp  Minmax_tweak_arthur.hpp  Reactions.hpp
src/: Basic.cpp  Human.cpp  Main.cpp  Minimax_tweak_arthur.cpp  Minmax.cpp  Minmax_tweak.cpp  Reactions.cpp
